--- a/static/article/常用函数库.md
+++ b/static/article/常用函数库.md
@@ -4,88 +4,179 @@
 
 ## 前端实际开发过程中，所用到的函数方法，重复的概率很大，每次重写会很麻烦，为了在开发中提高效率，将常用的处理函数积累在这里，边积累边更新，形成自己的函数库
 
-1. 比较数组是否相等
+### 1.比较引用类型相等
 
-    ```javascript
-    /*
-    * @descript 比较数组相等
-    * @param {array} arr
-    * @return {boolean}
-    */
-    Array.prototype.equals = function (arr) {
-    if (!arr){
+1.1比较数组是否相等
+
+```javascript
+/*
+* @descript 比较数组相等
+* @param {array} arr
+* @return {boolean}
+*/
+Array.prototype.equals = function (arr) {
+if (!arr){
+    return false;
+    }
+if (this.length != arr.length){
+    return false;
+    }
+for (var i = 0, l = this.length; i < l; i++) {
+    //判断是否还有嵌套数组
+    if (this[i] instanceof Array && arr[i] instanceof Array) {
+    if (!this[i].equals(arr[i])){
         return false;
         }
-    if (this.length != arr.length){
+    }
+    else if (this[i] != arr[i]) {
+    return false;
+    }
+}
+return true;
+}
+//不可枚举
+Object.defineProperty(Array.prototype, "equals", {enumerable: false});
+```
+
+1.2比较对象是否相等
+
+```javascript
+/*
+* @descript 比较对象相等
+* @param {object} object2
+* @return {boolean}
+*/
+Object.prototype.equals = function(object2) {
+for (propName in this) {
+    //判断object2中是否有实例的所有属性
+    if (this.hasOwnProperty(propName) != object2.hasOwnProperty(propName)) {
+    return false;
+    }
+    //检查类型是否一致
+    else if (typeof this[propName] != typeof object2[propName]) {
+    return false;
+    }
+}
+for(propName in object2) {
+    //判断实例是否有object2的所有属性
+    if (this.hasOwnProperty(propName) != object2.hasOwnProperty(propName)) {
+    return false;
+    }
+    //检查类型是否一致
+    else if (typeof this[propName] != typeof object2[propName]) {
+    return false;
+    }
+    //如果属性是继承属性直接跳过
+    if(!this.hasOwnProperty(propName)){
+        continue;
+        }
+        //判断value是否是数组
+    if (this[propName] instanceof Array && object2[propName] instanceof Array) {
+        //使用本文档第一个方法判断数组相等
+    if (!this[propName].equals(object2[propName])){
         return false;
         }
-    for (var i = 0, l = this.length; i < l; i++) {
-        //判断是否还有嵌套数组
-        if (this[i] instanceof Array && arr[i] instanceof Array) {
-        if (!this[i].equals(arr[i])){
+    }
+    //判断value是否是对象
+    else if (this[propName] instanceof Object && object2[propName] instanceof Object) {
+    if (!this[propName].equals(object2[propName]))
             return false;
-            }
-        }
-        else if (this[i] != arr[i]) {
-        return false;
-        }
     }
-    return true;
+    //直接比较两个value是否相等
+    else if(this[propName] != object2[propName]) {
+    return false;
     }
-    //不可枚举
-    Object.defineProperty(Array.prototype, "equals", {enumerable: false});
-    ```
+}
+return true;
+}
+```
 
-1. 比较对象是否相等
+### 2.时间处理
+1.过去距现在的时间
 
-    ```javascript
-    /*
-    * @descript 比较对象相等
-    * @param {object} object2
-    * @return {boolean}
-    */
-    Object.prototype.equals = function(object2) {
-    for (propName in this) {
-        //判断object2中是否有实例的所有属性
-        if (this.hasOwnProperty(propName) != object2.hasOwnProperty(propName)) {
-        return false;
-        }
-        //检查类型是否一致
-        else if (typeof this[propName] != typeof object2[propName]) {
-        return false;
-        }
+```javascript
+/*
+* @desc   格式化${startTime}距现在的已过时间
+* @param  {Date} startTime
+* @return {String}
+*/
+function formatPassTime(startTime) {
+    var currentTime = Date.parse(new Date()),
+        time = currentTime - startTime,
+        min = Math.floor(time / (1000 * 60)),
+        hour = Math.floor(time / (1000 * 60 * 60)),
+        day = Math.floor(time / (1000 * 60 * 60 * 24)),
+        month = parseInt(day / 30),
+        year = parseInt(month / 12);
+    if (year) {
+        return year + "年前";
     }
-    for(propName in object2) {
-        //判断实例是否有object2的所有属性
-        if (this.hasOwnProperty(propName) != object2.hasOwnProperty(propName)) {
-        return false;
-        }
-        //检查类型是否一致
-        else if (typeof this[propName] != typeof object2[propName]) {
-        return false;
-        }
-        //如果属性是继承属性直接跳过
-        if(!this.hasOwnProperty(propName)){
-            continue;
-            }
-            //判断value是否是数组
-        if (this[propName] instanceof Array && object2[propName] instanceof Array) {
-            //使用本文档第一个方法判断数组相等
-        if (!this[propName].equals(object2[propName])){
-            return false;
-            }
-        }
-        //判断value是否是对象
-        else if (this[propName] instanceof Object && object2[propName] instanceof Object) {
-        if (!this[propName].equals(object2[propName]))
-                return false;
-        }
-        //直接比较两个value是否相等
-        else if(this[propName] != object2[propName]) {
-        return false;
-        }
+    if (month){
+        return month + "个月前";
     }
-    //If everything passed, let's say YES
-    return true;
+    if (day){
+        return day + "天前"
     }
-    ```
+    if (hour){
+        return hour + "小时前"
+    }
+    if (min){
+        return min + "分钟前"
+    }
+    else return '刚刚'
+}
+```
+
+2.现在距未来的时间
+
+```javascript
+/*
+* @desc   格式化现在距${endTime}的剩余时间
+* @param  {Date} endTime
+* @return {String}
+*/
+function formatRemainTime(endTime) {
+    var startDate = new Date(); //开始时间
+    var endDate = new Date(endTime); //结束时间
+    var t = endDate.getTime() - startDate.getTime(); //时间差
+    var d = 0,
+        h = 0,
+        m = 0,
+        s = 0;
+    if (t >= 0) {
+        d = Math.floor(t / 1000 / 3600 / 24);
+        h = Math.floor(t / 1000 / 60 / 60 % 24);
+        m = Math.floor(t / 1000 / 60 % 60);
+        s = Math.floor(t / 1000 % 60);
+    }
+    return d + "天 " + h + "小时 " + m + "分钟 " + s + "秒";
+}
+```
+
+### 3.正则验证格式
+
+3.1邮箱验证
+
+```javascript
+/*
+* @desc   判断是否为邮箱地址
+* @param  {String}  str
+* @return {Boolean}
+*/
+function isEmail(str) {
+    return /\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*/.test(str);
+}
+```
+
+3.2手机号验证
+
+```javascript
+/*
+ * @desc   判断是否为手机号
+ * @param  {String|Number} str
+ * @return {Boolean}
+ */
+function isPhoneNum(str) {
+    return /^(0|86|17951)?(13[0-9]|15[012356789]|17[678]|18[0-9]|14[57])[0-9]{8}$/.test(str)
+}
+```
