--- a/static/article/常用函数库.md
+++ b/static/article/常用函数库.md
@@ -9,7 +9,7 @@
 1.1比较数组是否相等
 
 ```javascript
-/**
+/*
  * @descript 比较数组相等
  * @param {array} arr
  * @return {boolean}
@@ -41,7 +41,7 @@ Object.defineProperty(Array.prototype, "equals", {enumerable: false});
 1.2比较对象是否相等
 
 ```javascript
-/**
+/*
  * @descript 比较对象相等
  * @param {object} object2
  * @return {boolean}
@@ -92,10 +92,11 @@ return true;
 ```
 
 ### 2.时间处理
+
 1.过去距现在的时间
 
 ```javascript
-/**
+/*
  * @desc   格式化${startTime}距现在的已过时间
  * @param  {Date} startTime
  * @return {String}
@@ -130,7 +131,7 @@ function formatPassTime(startTime) {
 2.现在距未来的时间
 
 ```javascript
-/**
+/*
  * @desc   格式化现在距${endTime}的剩余时间
  * @param  {Date} endTime
  * @return {String}
@@ -158,7 +159,7 @@ function formatRemainTime(endTime) {
 3.1邮箱验证
 
 ```javascript
-/**
+/*
  * @desc   判断是否为邮箱地址
  * @param  {String}  str
  * @return {Boolean}
@@ -171,7 +172,7 @@ function isEmail(str) {
 3.2手机号验证
 
 ```javascript
-/**
+/*
  * @desc   判断是否为手机号
  * @param  {String|Number} str
  * @return {Boolean}
@@ -179,4 +180,24 @@ function isEmail(str) {
 function isPhoneNum(str) {
     return /^(0|86|17951)?(13[0-9]|15[012356789]|17[678]|18[0-9]|14[57])[0-9]{8}$/.test(str)
 }
+```
+
+### 4.滚动条相关
+
+4.1 判断滚动条是否到底
+
+```javascript
+/*
+ * @desc 判断滚动条是否到底
+ * @return {Boolean}
+ */
+ function isBottom(){
+     let scrollHeight,windowHeight,scrollTop;
+     scrollHeight = document.body.scrollHeight || document.documentElement.scrollHeight;
+     windowHeight = document.body.clientHeight || document.documentElement.clientHeight;
+     scrollTop = document.body.scrollTop || document.documentElement.scrollTop;
+     if(scrollHeight == windowHeight+scrollTop){
+         reuturn true; //刚好到达底部
+     }
+ }
 ```
